--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <h1>Bin2Dec</h1>
                 <input placeholder="Insira um número binário" type="text" id="input" name="input" size="20">
                 <button type="button" id="toDecimalBtn">Converter</button>
-                <output id="result" name="result" for="number">Placeholder</output>  
+                <output id="result" name="result" for="number"></output>  
                 </div>
             </div>
             
