--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
             <div class="container">
                 <div class="form">
                 <h1>Bin2Dec</h1>
-                <input placeholder="Insira um número binário" type="text" id="input" name="input" size="20">
-                <button type="button" id="toDecimalBtn">Converter</button>
+                <input placeholder="Insert binary number" type="text" id="input" name="input" size="20">
+                <button type="button" id="toDecimalBtn">Convert</button>
                 <output id="result" name="result" for="number"></output>  
                 </div>
             </div>
